apps/backend/build.log
ðŸ”— Found pyo3 bindings
ðŸ Found CPython 3.12 at /home/zarvent/developer/v2m-lab/apps/backend/venv/bin/python
   Compiling v2m_engine v0.2.0 (/home/zarvent/developer/v2m-lab/apps/backend/src/v2m_engine)
error[E0432]: unresolved import `numpy::PyArrayMethods`
  --> src/lib.rs:10:23
   |
10 | use numpy::{PyArray1, PyArrayMethods};
   |                       ^^^^^^^^^^^^^^ no `PyArrayMethods` in the root

error[E0599]: no method named `len` found for reference `&ringbuf::wrap::caching::Caching<Arc<SharedRb<Heap<f32>>>, false, true>` in the current scope
   --> src/lib.rs:189:30
    |
189 |                         if c.len() > 0 {
    |                              ^^^ method not found in `&ringbuf::wrap::caching::Caching<Arc<SharedRb<Heap<f32>>>, false, true>`

warning[E0133]: call to unsafe function `pyo3::impl_::extract_argument::unwrap_required_argument` is unsafe and requires unsafe block
   --> src/lib.rs:329:36
    |
329 |     fn is_speech(&mut self, frame: &PyArray1<i16>) -> PyResult<bool> {
    |                                    ^ call to unsafe function
    |
    = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
    = note: consult the function's documentation for information on how to avoid undefined behavior
    = note: `#[warn(unsafe_op_in_unsafe_fn)]` (part of `#[warn(rust_2024_compatibility)]`) on by default

warning[E0133]: call to unsafe function `pyo3::impl_::extract_argument::unwrap_required_argument` is unsafe and requires unsafe block
   --> src/lib.rs:357:16
    |
357 |         audio: &PyArray1<f32>,
    |                ^ call to unsafe function
    |
    = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
    = note: consult the function's documentation for information on how to avoid undefined behavior

warning[E0133]: call to unsafe function `pyo3::impl_::extract_argument::unwrap_required_argument` is unsafe and requires unsafe block
   --> src/lib.rs:445:16
    |
445 |         audio: &PyArray1<f32>,
    |                ^ call to unsafe function
    |
    = note: for more information, see <https://doc.rust-lang.org/edition-guide/rust-2024/unsafe-op-in-unsafe-fn.html>
    = note: consult the function's documentation for information on how to avoid undefined behavior

Some errors have detailed explanations: E0133, E0432, E0599.
For more information about an error, try `rustc --explain E0133`.
warning: `v2m_engine` (lib) generated 3 warnings
error: could not compile `v2m_engine` (lib) due to 2 previous errors; 3 warnings emitted
ðŸ’¥ maturin failed
  Caused by: Failed to build a native library through cargo
  Caused by: Cargo build finished with "exit status: 101": `env -u CARGO PYO3_BUILD_EXTENSION_MODULE="1" PYO3_ENVIRONMENT_SIGNATURE="cpython-3.12-64bit" PYO3_PYTHON="/home/zarvent/developer/v2m-lab/apps/backend/venv/bin/python" PYTHON_SYS_EXECUTABLE="/home/zarvent/developer/v2m-lab/apps/backend/venv/bin/python" "cargo" "rustc" "--profile" "release" "--message-format" "json-render-diagnostics" "--manifest-path" "/home/zarvent/developer/v2m-lab/apps/backend/src/v2m_engine/Cargo.toml" "--lib"`
